# worker-bench

./: .gitignore  README.md
raw-worker/: package-lock.json  package.json  wrangler.toml
raw-worker/src/: index.ts  index_big.ts  index_hello_world.ts
rust-worker/: Cargo.toml  package-lock.json  package.json
rust-worker/src/: lib.rs  lib_big.rs  lib_small.rs
