[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
lol_html = "1.2.0"
reqwest = { version="0.11.20", features = ["json"] }
serde_json = "1.0.107"
worker = "0.0.15"

[profile.release]
lto = true
strip = true
codegen-units = 1
